<resources>
    <string name="app_name">app_stock_fastapi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_main">Go to Main</string>
    <string name="welcome">Welcome</string>
    <string name="symbol">Symbol</string>
    <string name="search">Search</string>
    <string name="query_all">Query All</string>
    <string name="input_symbol">Input Symbol</string>
    <string name="_2330">2330</string>
    <string name="info">info</string>
    <string name="all_symbols">ALL Symbols</string>
    <string name="chatgpt_twii">ChatGPT TWII</string>
    <string name="chatgpt_result">ChatGPT Result</string>
    <string name="loading">Loading</string>
</resources>