<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:gravity="center"
        android:layout_above="@+id/et"
        android:text="@string/symbol" />

    <EditText
        android:id="@+id/et"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:hint="@string/input_symbol"
        android:textSize="30dp" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et"
        android:layout_centerInParent="true"
        android:text="@string/search" />

    <Button
        android:id="@+id/queryButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchButton"
        android:layout_centerInParent="true"
        android:text="@string/query_all" />

</RelativeLayout>